--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive"
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "deploy": "npm run build && scp -r build/* jaykayess:~/www/chromatico/"
   },
   "devDependencies": {
     "svg-sprite-loader": "^3.9.2"
