--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "npm-run-all": "^4.1.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "svg-sprite-loader": "^3.9.2"
   },
   "scripts": {
     "start-js": "react-scripts start",
@@ -23,6 +24,5 @@
     "deploy": "npm run build && scp -r build/* jaykayess:~/www/chromatico/"
   },
   "devDependencies": {
-    "svg-sprite-loader": "^3.9.2"
   }
 }
