--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "file-saver": "^1.3.8",
-    "node-sass-chokidar": "^1.3.3",
-    "npm-run-all": "^4.1.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5",
-    "svg-sprite-loader": "^3.9.2"
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "start-js": "react-scripts start",
@@ -24,5 +21,8 @@
     "deploy": "npm run build && scp -r build/* jaykayess:~/www/chromatico/"
   },
   "devDependencies": {
+    "node-sass-chokidar": "^1.3.3",
+    "npm-run-all": "^4.1.3",
+    "svg-sprite-loader": "^3.9.2"
   }
 }
