--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chromatico",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jaykayess.github.io/chromatico",
   "dependencies": {
     "classnames": "^2.2.6",
     "file-saver": "^1.3.8",
@@ -18,9 +19,11 @@
     "eject": "react-scripts eject",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "yarn run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "deploy": "yarn run build && scp -r build/* jaykayess:~/www/chromatico/"
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "svg-sprite-loader": "^3.9.2"
